--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,26 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <title>???</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body style="margin-left: 500px;">
 
-{% for key, value in params.items %}
-    <p style="font-size: 14px; line-height: 10px;"><strong>{{ key }}:</strong> &nbsp; {{ value }}</p>
-{% endfor %}
+<body style=" font-size: 15px; line-height: 18px;">
 
 
+<div class="container" style="margin-top: 50px">
+    <b>Canvas test Hash:&nbsp;</b> <span id='canvas-hash-test' style="margin-right: 100px;"></span>
+    <canvas id='myCanvas' width='200' height='40' style='border:1px solid #000000;'></canvas><br>
+    <b>Canvas Fingerprint:&nbsp;</b> <span id='canvas-hash' style="margin-right: 100px;"></span>
+
+    <div class="separate-line"></div>
+
+    {% for key, value in location_data.items %}
+        <p ><strong>{{ key }}:</strong> &nbsp; {{ value }}</p>
+    {% endfor %}
+
+    <div class="separate-line"></div>
+
+    {% for key, value in params.items %}
+        <p ><strong>{{ key }}:</strong> &nbsp; {{ value }}</p>
+    {% endfor %}
+
+    <div class="separate-line"></div>
+</div>
+
+<!-- canvas test-->
 <script>
-  const fpPromise = import('https://openfpcdn.io/fingerprintjs/v3')
-    .then(FingerprintJS => FingerprintJS.load())
+  var canvas = document.getElementById("myCanvas");
+  var ctx = canvas.getContext("2d");
+
+  ctx.fillStyle = "rgb(255,0,255)";
+  ctx.beginPath();
+  ctx.rect(20, 20, 150, 100);
+  ctx.fill();
+  ctx.stroke();
+  ctx.closePath();
+  ctx.beginPath();
+  ctx.fillStyle = "rgb(0,255,255)";
+  ctx.arc(50, 50, 50, 0, Math.PI * 2, true);
+  ctx.fill();
+  ctx.stroke();
+  ctx.closePath();
+
+  txt = 'abz190#$%^@£éú';
+  ctx.textBaseline = "top";
+  ctx.font = '17px "Arial 17"';
+  ctx.textBaseline = "alphabetic";
+  ctx.fillStyle = "rgb(255,5,5)";
+  ctx.rotate(.03);
+  ctx.fillText(txt, 4, 17);
+  ctx.fillStyle = "rgb(155,255,5)";
+  ctx.shadowBlur=8;
+  ctx.shadowColor="red";
+  ctx.fillRect(20,12,100,5);
+
+  src = canvas.toDataURL();
+  hash = 0;
+
+  for (i = 0; i < src.length; i++) {
+      char = src.charCodeAt(i);
+      hash = ((hash<<5)-hash)+char;
+      hash = hash & hash;
+  }
+
+  document.getElementById('canvas-hash-test').textContent = hash;
+</script>
+
+<!-- canvas fingerprint-->
+<script>
+  let height = window.screen.height;
+  let width = window.screen.width;
+
+  const fpPromise = import('https://openfpcdn.io/fingerprintjs/v3').then(FingerprintJS => FingerprintJS.load())
 
   fpPromise
-    .then(fp => fp.get())
-    .then(result => {
-      // This is the visitor identifier:
-      const visitorId = result.visitorId
-      console.log(visitorId)
+    .then(fp => fp.get()).then(result => { const visitorId = result.visitorId
+      document.getElementById('canvas-hash').textContent = visitorId;
     })
 </script>
+
+
+<style>
+  .separate-line {
+    margin: 20px 0;
+    border-bottom: 2px solid red;
+  }
+</style>
+
 
 </body>
 </html>
