--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -10,25 +10,29 @@
 
 
 <div class="container" style="margin-top: 50px">
+    <b>Device Info:&nbsp;</b> <span style="margin-right: 200px;"> {{ user_agent_info }} </span>
+
+    <div class="separate-line"></div>
+
     <b>Canvas test Hash:&nbsp;</b> <span id='canvas-hash-test' style="margin-right: 200px;"></span>
     <canvas id='myCanvas' width='200' height='40' style='border:1px solid #000000;'></canvas><br>
     <b>Canvas Fingerprint:&nbsp;</b> <span id='canvas-hash' style="margin-right: 100px;"></span>
 
     <div class="separate-line"></div>
 
-    <b>Server Timezone:&nbsp;</b> <span> {{ ip_timezone }} </span>
+    <b>Server Timezone:&nbsp;</b> <span style="margin-right: 100px;"> {{ ip_timezone }} </span>
     <b>System Timezone:&nbsp;</b> <span id='server-time'></span>
 
     <div class="separate-line"></div>
 
     {% for key, value in location_data.items %}
-        <p ><strong>{{ key }}:</strong> &nbsp; {{ value }}</p>
+        <p><strong>{{ key }}:</strong> &nbsp; {{ value }}</p>
     {% endfor %}
 
     <div class="separate-line"></div>
 
     {% for key, value in params.items %}
-        <p ><strong>{{ key }}:</strong> &nbsp; {{ value }}</p>
+        <p><strong>{{ key }}:</strong> &nbsp; {{ value }}</p>
     {% endfor %}
 
     <div class="separate-line"></div>
