--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -105,11 +105,11 @@
 
 <!-- Screen Size -->
 <script>
-  let height = window.screen.height;
-  let width = window.screen.width;
+  let height_value = window.screen.height;
+  let width_value = window.screen.width;
 
-  document.getElementById('screen-height').textContent = height;
-  document.getElementById('screen-width').textContent = width;
+  document.getElementById('screen-height').textContent = height_value;
+  document.getElementById('screen-width').textContent = width_value;
 </script>
 
 
