--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -25,7 +25,7 @@
         <div class="separate-line"></div>
 
         <div>
-            <b>Server Timezone:&nbsp;</b> <span style="margin-right: 100px;"> {{ ip_timezone }} </span>
+            <b>Server Timezone:&nbsp;</b> <span style="margin-right: 100px;"> {{ timezone_info.utc_offset }} </span>
             <b>System Timezone:&nbsp;</b> <span id='server-time'></span>
         </div>
 
@@ -45,7 +45,7 @@
             <div><b>pageWidth:&nbsp;</b> <span id='pageWidth' style="margin-right: 100px;"></span></div>
             <div><b>pageHeight:&nbsp;</b> <span id='pageHeight'></span></div>
 
-            <div><b>TOR:&nbsp;</b> <span id='tor'></span>NO</div>
+            <div><b>TOR:&nbsp;</b> <span id='tor'>NO</span></div>
         </div>
 
         <div class="separate-line"></div>
