--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -223,6 +223,8 @@
         console.log(window)
         console.log(WURFL)
 
+        console.log(window.components);
+
     </script>
 
     <style>
